<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/home">
    <fragment
        android:id="@+id/home"
        android:name="com.example.twinky.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/search"
        android:name="com.example.twinky.fragments.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />
    <dialog
        android:id="@+id/add"
        android:name="com.example.twinky.fragments.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/reel"
        android:name="com.example.twinky.fragments.ReelFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_reel" />
    <fragment
        android:id="@+id/profile"
        android:name="com.example.twinky.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>